214 path operator (#220)
* started first experiment to fix fix issue #214

Path Operators "%" error #214

Signed-off-by: Martin Bluemel <martin.bluemel@web.de>

* Added small Tester UI extension
Limited trace output in Expressions visitor

Signed-off-by: Martin Bluemel <martin.bluemel@web.de>

* - refined ANTLR grammar for parent path
- added unit test case

Signed-off-by: Martin Bluemel <martin.bluemel@web.de>

* Removed IDE warning

Signed-off-by: Martin Bluemel <martin.bluemel@web.de>

* Partial success with parent node map in _environment

* Now also an arbitrary sequence of "%." should work out.

TODO test this hack very thoroughly

* Fixed parent node determination to run 3rd example

Signed-off-by: Martin Bluemel <martin.bluemel@web.de>

* shortened parent node retrieval

Signed-off-by: Martin Bluemel <martin.bluemel@web.de>

* Fixed mapping example 4 in ExpressionsVisitor

by generalizing special context classes to ExprContext

Signed-off-by: Martin Bluemel <martin.bluemel1@vodafone.com>

* IBM/JSONata4Java#214

* IBM/JSONata4Java#214 Updated pom.xml for Java 11

* Idea: by default execute all simple unit tests

* Roll back some of the test suite changes

* Fix build on Linux

* Fix build on Linux 2nd try

* Integrated PathExpressionTests into AgnosticTestSuite

Signed-off-by: Martin Bluemel <martin.bluemel@web.de>

* Implemented edge case "solitary root path"

* Added error when applying % too often

Signed-off-by: Martin Bluemel <martin.bluemel@web.de>
Signed-off-by: Martin Bluemel <martin.bluemel1@vodafone.com>
Co-authored-by: Martin Bluemel <martin.bluemel1@vodafone.com>
Co-authored-by: wnmills3 <wnmills3@gmail.com>